[package]
name = "bostr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
nostr-sdk = "0.39.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
serde = { version = "1.0", features = ["derive"] }

anyhow = "1.0"
serde_json = "1.0"
zmq = "0.10.0"
bitcoin = "0.32.7"
bitcoind-async-client = "0.6.0"

